# UGC_hackflow

./: .env.example  .gitignore  CONTEXT.md  CONTEXT2.md  PRD.md  PRODUCTION.md  README.md  milestone.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py  models.py
backend/app/constants/: creator_tags.py
backend/app/jobs/: ai_summary.py  enrichment.py  reminders.py  reporting.py
backend/app/services/: ai_service.py  apify_client.py  creator_intake.py  enrichment_runner.py  follow_up.py  intake_options.py  normalizers.py  outreach_handoff.py  telegram_bot.py  telegram_intake.py  twenty_auth.py  twenty_client.py  twenty_webhook.py
backend/app/tests/: test_ai_service.py  test_ai_summary_job.py  test_creator_intake_api.py  test_creator_intake_service.py  test_enrichment_job.py  test_follow_up.py  test_normalizers.py  test_storage_normalizer.py  test_telegram_intake.py  test_telegram_webhook.py  test_twenty_client_integration.py
backend/scripts/: smoke_step1_twenty.py
docs/: architecture.md  data-model.md  self-hosted-twenty.md  twenty-developer-guide.md  view-and-messaging-mini-plans.md  workflows.md
docs/question-answers/: 01-workflow-understanding.md  02-working-prototype.md  03-reliability-maintainability.md
twenty-app/: README.md  package.json
twenty-app-official/: package.json
twenty-app-official/scripts/: backfill-approved-handoff.mjs  cleanup-workspace-sidebar.mjs  seed-sample-data.mjs
twenty-app-official/src/constants/: campaign-budget.spec.ts  campaign-budget.ts  deliverable-review.spec.ts  deliverable-review.ts  (+5 more)
(+47 files in other folders)
